fix edit profile text visibility on light mode

--- a/classic_tetris_project/web/assets/stylesheets/_buttons.scss
+++ b/classic_tetris_project/web/assets/stylesheets/_buttons.scss
@@ -13,9 +13,9 @@
   text-decoration: none;
   cursor: pointer;
 
-  a {
-    color: colors.$button-primary-text;
-  }
+  // a {
+  //   color: var(--link-primary);
+  // }
 
   &:hover {
     border: none;
